ingress-project/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-service
spec:
  type: NodePort
  selector:
    app: first-nginx
  ports:
    - port: 6000
      targetPort: 80
      nodePort: 30007
